# Voice-Privacy-Challenge-2024

./: install.sh  pyproject.toml
anonymization/modules/sttts/prosody/: prosody.py  prosody_anonymization.py
anonymization/modules/sttts/text/: text.py
anonymization/modules/sttts/tts/: speech_synthesis.py
evaluation/privacy/asv/: speaker_embeddings.py
