[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-privacy-challenge-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "scipy==1.12.0",
  "librosa==0.9.2",
  "tensorboard>=2.15.1",
  "soundfile>=0.12.1",
  "ffmpeg>=1.4",
  "tqdm",
  "pyarrow>=15.0.0",
  "pandas>=2.2.0",
  "numba",
  "pyloudnorm>=0.1.1",
  "kaldiio>=2.18.0",
  "transformers>=4.37.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "anonymization",
  "evaluation",
  "utils",
]
exclude = []
namespaces = false
